[package]
name = "rmbuild"
version = "0.1.0"
authors = ["Azathoth"]
edition = "2021"
description = "A tiny tool for removing build folders"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
rayon = "1.5.3"
anyhow = "1"
home = "0.5"
clap = { version = "3.2", features = ["derive"] }
colored = "2"